compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumCompanion.descriptors.java
public final class CompanionContainer /* pack.CompanionContainer*/ {
  @org.jetbrains.annotations.NotNull()
  public static final pack.CompanionContainer.Companion Companion;

  public  CompanionContainer();//  .ctor()

  public static final class Companion /* pack.CompanionContainer.Companion*/ {
    private  Companion();//  .ctor()
  }
}
